Update SDK sample apps

--- a/samples/android/mobileconnectsdksample/app/src/main/res/layout/activity_main.xml
+++ b/samples/android/mobileconnectsdksample/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.viewpager.widget.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/app_menu"/>
+        android:background="@color/cardview_light_background"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/app_menu" />
 
 </RelativeLayout>
