--- a/samples/android/mobileconnectsdksample/app/src/main/res/layout/fragment_mobilecredential_list.xml
+++ b/samples/android/mobileconnectsdksample/app/src/main/res/layout/fragment_mobilecredential_list.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:name="com.gallagher.mobileconnectsdksample.mobileconnectsdksample.RegistrationsFragment"
+    android:name="com.gallagher.mobileconnectsdksample.mobileconnectsdksample.CredentialsFragment"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.gallagher.mobileconnectsdksample.mobileconnectsdksample.RegistrationsFragment"
+    tools:context="com.gallagher.mobileconnectsdksample.mobileconnectsdksample.CredentialsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
