--- a/samples/android/mobileconnectsdksample/app/src/main/res/menu/app_menu.xml
+++ b/samples/android/mobileconnectsdksample/app/src/main/res/menu/app_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_registration"
+    <item android:id="@+id/action_credentials"
         android:enabled="true"
         android:icon="@drawable/ic_content_copy_black_24dp"
         android:title="Credentials"
@@ -11,6 +11,18 @@
         android:enabled="true"
         android:icon="@drawable/ic_phonelink_ring_black_24dp"
         android:title="Readers"
+        tools:ignore="HardcodedText" />
+
+    <item android:id="@+id/action_salto_keys"
+        android:enabled="true"
+        android:icon="@drawable/ic_outline_class_24"
+        android:title="Salto"
+        tools:ignore="HardcodedText" />
+
+    <item android:id="@+id/action_digital_ids"
+        android:enabled="true"
+        android:icon="@drawable/ic_outline_account_circle_24"
+        android:title="Digital IDs"
         tools:ignore="HardcodedText" />
 
 </menu>
